--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@
 
 AC_PREREQ(2.52)
 AC_INIT(policy-settings, 0.0.1)
-AC_CONFIG_SRCDIR(test)
+AC_CONFIG_SRCDIR(basic)
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AC_CONFIG_HEADERS(dummy.h)
 
