Disabled some unused card definitions.
pulseaudio was switched over to use directly alsa-sink-old and
alsa-source-old instead of alsa-card-old. Hence these are not
used any more.

--- a/basic/etc/pulse/xpolicy.conf
+++ b/basic/etc/pulse/xpolicy.conf
@@ -163,81 +163,80 @@ type    = bthsp
 name    = startswith:"bluez_card"
 profile = hsp
 
-[card]
-type    = ihfandheadset
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = ihfandheadphone
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = headset
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = headsetforcall
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = headphone
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = headphoneforcall
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = headmike
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = ihfandtvout
-name    = equals:rx51
-profile = normal
-
-
-[card]
-type    = tvout
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = earpieceandtvout
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = earpiece
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = microphone
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = ihfandfmtx
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = fmtx
-name    = equals:rx51
-profile = normal
-
-[card]
-type    = ihf
-name    = equals:rx51
-profile = normal
+#[card]
+#type    = ihfandheadset
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = ihfandheadphone
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = headset
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = headsetforcall
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = headphone
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = headphoneforcall
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = headmike
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = ihfandtvout
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = tvout
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = earpieceandtvout
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = earpiece
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = microphone
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = ihfandfmtx
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = fmtx
+#name    = equals:rx51
+#profile = normal
+#
+#[card]
+#type    = ihf
+#name    = equals:rx51
+#profile = normal
 
 # -------- Device section ------------------------------------------------------
 
