Create symlinks during "make install" if requested so (INSTALL_SYMLINKS=1).

--- a/basic/etc/Makefile.am
+++ b/basic/etc/Makefile.am
@@ -8,5 +8,12 @@ config_DATA  = videoep.conf # $(SYSPART_CONF)
 MAINTAINERCLEANFILES = Makefile.in
 SUBDIRS = pulse ohm
 
-#install-data-hook:
+install-data-hook: install-symlinks
 #	mkdir -p $(DESTDIR)/$(configdir)/$(SYSPART_CONF).d
+
+install-symlinks:
+	if test "x$(INSTALL_SYMLINKS)" = "x1"; then                         \
+	    if ! test -e $(DESTDIR)/$(datadir)policy/etc/current; then      \
+	        ln -sf $(RULESET) $(DESTDIR)/$(datadir)/policy/etc/current; \
+	    fi                                                              \
+	fi
