--- a/basic/etc/pulse/Makefile.am
+++ b/basic/etc/pulse/Makefile.am
@@ -5,3 +5,13 @@ config_DATA  = xpolicy.conf
 
 MAINTAINERCLEANFILES = Makefile.in
 
+install-data-hook: install-symlinks
+
+install-symlinks:
+	if test "x$(INSTALL_SYMLINKS)" = "x1"; then                        \
+	    mkdir -p $(DESTDIR)/$(sysconfdir)/pulse;                       \
+	    if ! test -e $(DESTDIR)/$(sysconfdir)/pulse/xpolicy.conf; then \
+	        ln -sf $(datadir)/policy/etc/current/pulse/xpolicy.conf    \
+                       $(DESTDIR)/$(sysconfdir)/pulse/xpolicy.conf;        \
+	    fi                                                             \
+	fi
