--- a/basic/policy/Makefile.am
+++ b/basic/policy/Makefile.am
@@ -19,3 +19,12 @@ policy.plc: policy.pl $(LIBPROLOG)
 
 clean-local:
 	rm -f *~ *.plc *.dresc
+
+install-data-hook: install-symlinks
+
+install-symlinks:
+	if test "x$(INSTALL_SYMLINKS)" = "x1"; then                           \
+	    if ! test -e $(DESTDIR)/$(datadir)/policy/rules/current; then     \
+	        ln -sf $(RULESET) $(DESTDIR)/$(datadir)/policy/rules/current; \
+	    fi                                                                \
+	fi
