Added videoeditor group to xpolicy.conf.

--- a/basic/etc/pulse/xpolicy.conf
+++ b/basic/etc/pulse/xpolicy.conf
@@ -79,6 +79,12 @@ sink   = sink.voice.raw
 source = source.record
 
 [group]
+name   = videoeditor
+flags  = limit_volume, cork_stream
+sink   = sink.music
+source = source.voice.raw
+
+[group]
 name   = ipcall
 flags  = set_sink, set_source, limit_volume, cork_stream
 sink   = sink.voice
