Also honour audio routing decisions for videoeditor group.

--- a/basic/etc/pulse/xpolicy.conf
+++ b/basic/etc/pulse/xpolicy.conf
@@ -80,7 +80,7 @@ source = source.record
 
 [group]
 name   = videoeditor
-flags  = limit_volume, cork_stream
+flags  = route_audio, limit_volume, cork_stream
 sink   = sink.music
 source = source.voice.raw
 
