N950: Add new group feedbacksound to PA enforcement configuration.

--- a/basic/etc/pulse/xpolicy.conf
+++ b/basic/etc/pulse/xpolicy.conf
@@ -19,6 +19,12 @@ sink   = sink.voice.raw
 source = sink.null.monitor
 
 [group]
+name   = feedbacksound
+flags  = set_sink, limit_volume, cork_stream, mute_by_route
+sink   = sink.voice.raw
+source = sink.null.monitor
+
+[group]
 name   = inputsound
 flags  = set_sink, limit_volume, cork_stream, mute_by_route
 sink   = sink.voice.raw
