N950: Add feedbacksound streams.

--- a/basic/etc/pulse/xpolicy.conf
+++ b/basic/etc/pulse/xpolicy.conf
@@ -465,6 +465,14 @@ property = media.role@equals:"camera-sound-effect"
 group    = camera
 
 [stream]
+property = event.id@equals:"pulldown_highlight"
+group    = feedbacksound
+
+[stream]
+property = event.id@equals:"pulldown_lock"
+group    = feedbacksound
+
+[stream]
 exe      = camera-ui
 group    = camera
 
